# bldr

./: Cargo.toml  Dockerfile  README.md  bldr.sh  example.spec  run.sh  values.yaml
RPMS/aarch64/: hello-1.0.0-1.aarch64.rpm
examples/hello/: go.mod
rpmbuild/RPMS/aarch64/: hello-1.0.0-1.aarch64.rpm
src/: main.rs  rpm.rs
test/: example.spec  values.yaml
