[package]
name = "bldr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
handlebars = "5.1.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_yaml = "0.9.32"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
